k8s/apps/nix-course/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nix-course
  labels:
    app: nix-course
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nix-course
  template:
    metadata:
      labels:
        app: nix-course
    spec:
      containers:
        - name: nix-course
          image: ghcr.io/litarvan/nix-course-fr:main@sha256:2f3bdbaf273c6057c88cda910954350d2f0e0d495c9f3f8ef5ffe91341fabf75
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 128Mi
      imagePullSecrets:
        - name: litarvan-github-registry
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
