k8s/apps/nix-course/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nix-course
spec:
  type: ClusterIP
  selector:
    app: nix-course
  ports:
    - name: http
      port: 80
      targetPort: 3000
