k8s/apps/nix-course/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nix-course
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`course.nix.litarvan.com`)
      services:
        - name: nix-course
          port: http
