k8s/apps/nix-course/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nix-course
spec:
  rules:
    - host: nix.litarvan.dev # TODO
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nix-course
                port:
                  name: http
  tls:
    - hosts:
        - nix.litarvan.dev
      secretName: nix-tls
